test/bad/classes/type05.px

class A def
    Int x

class B(A) def
    Int y


[A]? a = [B()]
